# cocotb_uvm

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml
examples/: __init__.py
examples/cosim_test/: __init__.py
examples/cosim_test/rtl/: add_one.sv  cosim_test.f  cosim_test.sv  simple_dual_ram.sv  sy_fifo.sv
examples/cosim_test/tb/: __init__.py  add_one_cosim.py  cosim_test_wrapper.py  ctb.mk  memory.py  sub_one_cosim.py  sys_ctrl.py
skills/build-cocotb-uvm-env/: SKILL.md
skills/build-cocotb-uvm-env/agents/: openai.yaml
skills/build-cocotb-uvm-env/references/: api-and-patterns.md
skills/cocotb-uvm/: SKILL.md
skills/cocotb-uvm-platform-builder/: SKILL.md
skills/cocotb-uvm-platform-builder/agents/: openai.yaml
skills/cocotb-uvm-platform-builder/references/: api-map.md  component-patterns.md  example-cosim-test.md  generation-strategy.md  module-cosim-pattern.md  wrapper-pattern.md
skills/cocotb-uvm/evals/: evals.json
skills/cocotb-uvm/references/: api_reference.md  patterns.md
src/cocotb_uvm/: __init__.py  base.py  components.py  cosim.py  sequencing.py  sim_logger.py  transaction.py  utils.py
test/: __init__.py
test/rtl/: cosim_test.f  single_port_ram.sv  sub_one.sv
test/tb/: base.py  ctb.mk  test_cosim_test.py
tests/: test_public_api.py  test_sim_logger.py
utils/: expand_list.sh
