[project]
name = "cocotb-uvm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "liuzijie", email = "2959535013@qq.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
