[project]
name = "cocotb-uvm"
version = "0.1.0"
description = "A cocotb-based UVM-style co-simulation verification framework."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "liuzijie", email = "2959535013@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cocotb>=2.0.0",
]
keywords = [
    "cocotb",
    "verification",
    "uvm",
    "hardware",
    "simulation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
examples = [
    "einops>=0.8.0",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
